k3s-example-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k3s-demo
  namespace: sandbox
spec:
  replicas: 3
  selector:
    matchLabels:
      app: k3s-demo
  template:
    metadata:
      labels:
        app: k3s-demo
    spec:
      containers:
      - name: k3s-demo
        image: nginxdemos/hello
        ports:
          - containerPort: 80
