k3s-example-svc.yml
---
apiVersion: v1
kind: Service
metadata:
  name: k3s-demo
  namespace: sandbox
spec:
  ports:
  - name: http
    targetPort: 8000
    port: 80
  selector:
    app: k3s-demo
