k3s-example-ingress.yml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: k3s-demo
  namespace: sandbox
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web

spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: k3s-demo
                port:
                  number: 80
          - path: /foo
            pathType: Prefix
            backend:
              service:
                name: k3s-demo
                port:
                  number: 80
